<resources>
    <string name="app_name">LoginWithNavigationFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_title_login">Login</string>
    <string name="label_user_name">User Name</string>
    <string name="password">Password</string>
    <string name="input_user">Ingresa tu usuario</string>
    <string name="input_password">Ingresa tu contraseña</string>
    <string name="label_iniciar_sesion">Iniciar Sesión</string>
    <string name="label_registrate">Resgístrate</string>
</resources>